--- a/visu/Cargo.toml
+++ b/visu/Cargo.toml
@@ -9,3 +9,5 @@ homepage = "https://github.com/VladasZ/visu"
 repository = "https://github.com/VladasZ/visu"
 
 [dependencies]
+anyhow = "1.0"
+plotters = "0.3"
